# haskbot

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  config.example.toml  default.nix  haskbot.cabal  shell.nix  stack.yaml
app/: Main.hs
haskell.nix/: default.nix
nix/: README.md  deps.nix  packages.nix  pinned-pkgs.json  pinned-pkgs.nix  project.nix  release.nix
nix-shell/: shell.nix
nix/lib/: utils.nix
src/: Haskbot.hs
src/Haskbot/: Bot.hs  Config.hs  Data.hs  Interpreter.hs  Resources.hs
src/Haskbot/Interpreter/: Context.hs  Error.hs  Options.hs
